Open drain for DTR reset

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
+research
+
 # For PCBs designed using KiCad: https://www.kicad.org/
 # Format documentation: https://kicad.org/help/file-formats/
+
+*.lck
 
 # Temporary files
 *.000
