--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 research
+plot
 
 # For PCBs designed using KiCad: https://www.kicad.org/
 # Format documentation: https://kicad.org/help/file-formats/
